--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,21 @@
 dist: trusty
-sudo: false
+sudo: required
+before_install:
+ - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-latex-recommended texlive-latex-extra
+script:
+ - mkdir build
+ - pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex &&
+   (bibtex build/index || true) &&
+   pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex &&
+   pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex
+after_success:
+ - mkdir deploy
+ - cp build/*.pdf deploy/
+deploy:
+  provider: pages
+  github_token: $GITHUB_TOKEN
+  local_dir: deploy
+  target_branch: pdfs
+  skip_cleanup: true
+  on:
+    branch: master
